syntax = "proto3";

package inventory;

option go_package = "github.com/abaika-abay/ecommerce/protos/inventory";

message Product {
  string id = 1;
  string name = 2;
  string description = 3;
  double price = 4;
  int32 stock = 5;
  string category_id = 6;
  string created_at = 7;
  string updated_at = 8;
}

message CreateProductRequest {
  string name = 1;
  string description = 2;
  double price = 3;
  int32 stock = 4;
  string category_id = 5;
}

message ProductResponse {
  Product product = 1;
}

message GetProductRequest {
  string id = 1;
}

message UpdateProductRequest {
  string id = 1;
  string name = 2;
  string description = 3;
  double price = 4;
  int32 stock = 5;
  string category_id = 6;
}

message DeleteProductRequest {
  string id = 1;
}

message Empty {}

message ListProductsRequest {
  int32 page = 1;
  int32 limit = 2;
  string category_id = 3;
}

message ListProductsResponse {
  repeated Product products = 1;
  int32 total = 2;
  int32 page = 3;
  int32 limit = 4;
}

service InventoryService {
  rpc CreateProduct(CreateProductRequest) returns (ProductResponse);
  rpc GetProductByID(GetProductRequest) returns (ProductResponse);
  rpc UpdateProduct(UpdateProductRequest) returns (ProductResponse);
  rpc DeleteProduct(DeleteProductRequest) returns (Empty);
  rpc ListProducts(ListProductsRequest) returns (ListProductsResponse);
}